fix: Fix add storage page

--- a/src/main/resources/templates/gifticon/add.html
+++ b/src/main/resources/templates/gifticon/add.html
@@ -6,7 +6,6 @@
 <body class="config">
 <div class="preloader is-active">
     <div class="preloader__wrap">
-
         <img class="preloader__img" src="images/preloader.png" alt=""></div>
 </div>
 
@@ -199,6 +198,11 @@
                                     <div id="error-barcode-div" class="u-s-m-b-10">
                                         <label id="error-barcode-modal-label" class="gl-label"
                                                style="color: red"></label>
+                                    </div>
+
+                                    <div class="u-s-m-b-5">
+                                        <label class="gl-label">구매 가격</label>
+                                        <input id="price-modal-input" name="price" class="news-l__input" type="number" step="10" placeholder="구매 가격을 입력해주세요">
                                     </div>
 
 
