--- a/src/main/resources/templates/gifticon/list.html
+++ b/src/main/resources/templates/gifticon/list.html
@@ -43,6 +43,9 @@
             transform: translate(0, -1px);
         }
 
+        #price-container:first-child td {
+            color: red;
+        }
     </style>
 </head>
 <body class="config">
@@ -91,7 +94,8 @@
                             <div class="filter-category-container" id="filter-category-container">
                                 <div class="filter__category-wrapper">
 
-                                    <button class="btn filter__btn filter__btn--style-1 js-checked brand-filter total-filter" type="button"
+                                    <button class="btn filter__btn filter__btn--style-1 js-checked brand-filter total-filter"
+                                            type="button"
                                             data-filter="*">전체
                                     </button>
                                 </div>
@@ -128,37 +132,69 @@
 
     <!--====== Modal Section ======-->
 
+    <!--====== Quick Look Modal ======-->
+    <div class="modal fade new-l" id="newsletter-modal">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content modal--shadow">
+
+                <button class="btn new-l__dismiss fas fa-times" type="button" data-dismiss="modal"></button>
+                <div class="modal-body">
+                    <div class="row u-s-m-x-0">
+                        <div class="col-lg-6 new-l__col-1 u-s-p-x-0">
+                            <a class="new-l__img-wrap u-d-block" href="">
+                                <img id="gifticon-modal-img" class="u-img-fluid u-d-block" src="" alt="기프티콘 이미지">
+                            </a>
+                        </div>
+
+                        <div class="col-lg-6 new-l__col-2">
+                            <div class="new-l__section u-s-m-t-30">
+                                <div class="u-s-m-b-8 new-l--center">
+                                    <h3 class="new-l__h3" id="modal-product-name">기프티콘 가격 확인</h3>
+                                </div>
+                                <div class="u-s-m-b-5">
+                                    <table class="col-12">
+                                        <tbody id="price-container">
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--====== End - Quick Look Modal ======-->
 
     <!--====== End - Modal Section ======-->
 </div>
 <!--====== End - Main App ======-->
 
 <th:block th:replace="fragments/base/script :: script"></th:block>
-<script src="/js/gifticon/kakao-chatbot.js"></script>
-<script src="/js/gifticon/file-add.js"></script>
+<script src="/js/gifticon/list-modal.js"></script>
 <script src="/js/gifticon/list.js"></script>
 <script src="/js/gifticon/product-selector.js"></script>
-<script th:inline="javascript">
-    window.onload = function() {
-        createProductSpan("전체", "all", true,"/images/categorylogo/all2.png" );
-        createProductSpan("카페", "cafe", false,"/images/categorylogo/cafe-logo2.png");
-        createProductSpan("베이커리/도넛", "bakery-donut", false, "/images/categorylogo/bakery-logo.png");
-        createProductSpan("백화점/마트", "department-mart", false , "/images/categorylogo/departmentstore-logo.png");
-        createProductSpan("아이스크림", "icecream", false , "/images/categorylogo/icecream-logo.png");
-        createProductSpan("편의점", "convenient", false , "/images/categorylogo/drugstore-logo.png");
-        createProductSpan("버거/피자", "burger-pizza", false, "/images/categorylogo/fastfood-logo.png");
-        createProductSpan("치킨", "chicken", false , "/images/categorylogo/chicken-logo.png");
-        createProductSpan("외식/분식/배달", "outside", false, "/images/categorylogo/bunsick-logo.png" );
-        createBreak();
-        createProductSpan("구이/족발", "roast-porkfeet", false , "/images/categorylogo/fried-logo.png");
-        createProductSpan("레스토랑/뷔페", "restaurant-buffet", false, "/images/categorylogo/restaurant-logo.png");
-        createProductSpan("영화/음악/도서", "movie-music-books", false, "/images/categorylogo/culture-logo.png" );
-        createProductSpan("주유권", "oil", false , "/images/categorylogo/oil-logo.png");
-        createProductSpan("뷰티/헤어/바디", "beauty-hair-body", false , "/images/categorylogo/beauty-logo.png");
-        createProductSpan("건강/리빙/식품관", "health-living-foods", false, "/images/categorylogo/healthy-logo.png");
-        createProductSpan("생활/가전/엔터", "life-electronic-entertain", false , "/images/categorylogo/machine-logo.png");
-        createProductSpan("기타", "etc", false, "/images/categorylogo/etc-logo.png");
 
+<script th:inline="javascript">
+    window.onload = function () {
+        createProductSpan("전체", "all", true, "/images/categorylogo/all2.png");
+        createProductSpan("카페", "cafe", false, "/images/categorylogo/cafe-logo2.png");
+        createProductSpan("베이커리/도넛", "bakery-donut", false, "/images/categorylogo/bakery-logo.png");
+        createProductSpan("백화점/마트", "department-mart", false, "/images/categorylogo/departmentstore-logo.png");
+        createProductSpan("아이스크림", "icecream", false, "/images/categorylogo/icecream-logo.png");
+        createProductSpan("편의점", "convenient", false, "/images/categorylogo/drugstore-logo.png");
+        createProductSpan("버거/피자", "burger-pizza", false, "/images/categorylogo/fastfood-logo.png");
+        createProductSpan("치킨", "chicken", false, "/images/categorylogo/chicken-logo.png");
+        createProductSpan("외식/분식/배달", "outside", false, "/images/categorylogo/bunsick-logo.png");
+        createBreak();
+        createProductSpan("구이/족발", "roast-porkfeet", false, "/images/categorylogo/fried-logo.png");
+        createProductSpan("레스토랑/뷔페", "restaurant-buffet", false, "/images/categorylogo/restaurant-logo.png");
+        createProductSpan("영화/음악/도서", "movie-music-books", false, "/images/categorylogo/culture-logo.png");
+        createProductSpan("주유권", "oil", false, "/images/categorylogo/oil-logo.png");
+        createProductSpan("뷰티/헤어/바디", "beauty-hair-body", false, "/images/categorylogo/beauty-logo.png");
+        createProductSpan("건강/리빙/식품관", "health-living-foods", false, "/images/categorylogo/healthy-logo.png");
+        createProductSpan("생활/가전/엔터", "life-electronic-entertain", false, "/images/categorylogo/machine-logo.png");
+        createProductSpan("기타", "etc", false, "/images/categorylogo/etc-logo.png");
 
         getPurchasingGifticon([[${param.page}]], [[${param.size}]]);
 
@@ -170,7 +206,6 @@
         totalFilterEvent();
 
         totalCategoryEvent();
-
     }
 </script>
 
