Feat: 장바구니 버튼 추가

--- a/src/main/resources/templates/gifticon/list.html
+++ b/src/main/resources/templates/gifticon/list.html
@@ -43,8 +43,12 @@
             transform: translate(0, -1px);
         }
 
-        #price-container:first-child td {
+        #price-container tr:first-child {
             color: red;
+        }
+
+        #price-container td {
+            text-align: center;
         }
     </style>
 </head>
