feat: Product and gifticon register reject

--- a/src/main/resources/templates/admin/admin-index.html
+++ b/src/main/resources/templates/admin/admin-index.html
@@ -191,8 +191,13 @@
                                     </div>
 
                                     <div id="error-barcode-div" class="u-s-m-b-10">
-                                        <label id="error-barcode-modal-label" class="gl-label"
-                                               style="color: red"></label>
+                                        <label id="error-barcode-modal-label" class="gl-label" style="color: red"></label>
+                                    </div>
+
+                                    <div class="u-s-m-b-5">
+                                        <label class="gl-label">가격</label>
+                                        <input id="price-modal-input" name="price" class="news-l__input" type="text"
+                                               placeholder="구매한 가격을 입력해주세요.">
                                     </div>
 
                                     <div class="u-s-m-b-5">
@@ -215,7 +220,7 @@
 
                                     <div class="gl-inline u-s-m-y-15">
                                         <div id="category-div">
-                                            <select id="category-select" name="cancelReason" class="select-box select-box--primary-style u-w-100">
+                                            <select id="category-select" name="category" class="select-box select-box--primary-style u-w-100">
                                                 <option selected="">카테고리</option>
                                             </select>
                                         </div>
@@ -234,7 +239,7 @@
                                     <div class="u-s-m-b-15" style="display: flex; justify-content: end;">
                                         <div class="gl-inline">
                                             <span></span>
-                                            <button id="gifticon-confirm-modal-btn" class="btn btn--e-brand-b-2" type="submit">등록</button>
+                                            <a id="gifticon-confirm-modal-btn" class="btn btn--e-brand-b-2">등록</a>
                                         </div>
                                     </div>
 
