style: Change input type text to password

--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -47,19 +47,18 @@
                                                    id="login-email" placeholder="Enter E-mail"></div>
                                         <div id="login-password-div" class="u-s-m-b-30">
                                             <label class="gl-label" for="login-password">비밀번호</label>
-                                            <input class="input-text input-text--primary-style" type="text"
+                                            <input class="input-text input-text--primary-style" type="password"
                                                    id="login-password" placeholder="Enter Password"></div>
                                         <div class="gl-inline">
                                             <div class="u-s-m-b-30">
-                                                <a class="gl-link" href="lost-password.html">회원 가입</a>
+                                                <a class="gl-link" href="/signup">회원 가입</a>
                                             </div>
 
                                             <div class="u-s-m-b-30">
-                                                <a class="gl-link" href="lost-password.html">비밀번호 찾기</a>
+                                                <a class="gl-link" href="/lost-password">비밀번호 찾기</a>
                                             </div>
 
                                             <div class="u-s-m-b-30">
-
                                                 <button class="btn btn--e-transparent-brand-b-2" type="submit">로그인</button>
                                             </div>
                                         </div>
