Feat: 기프티콘 구매 페이지를 인덱스로 쓰기로 결정

--- a/src/main/resources/templates/fragments/base/header.html
+++ b/src/main/resources/templates/fragments/base/header.html
@@ -92,9 +92,9 @@
                             <li><a href="/gifticon/add">기프티콘 등록</a></li>
                             <li><a href="/user/my-gifticon">내 기프티콘</a></li>
                             <li><a href="/gifticon/list">기프티콘 목록</a></li>
-                            <li>
-                                <a href="/gifticons">기프티콘 구매</a>
-                            </li>
+<!--                            <li>-->
+<!--                                <a href="/gifticons">기프티콘 구매</a>-->
+<!--                            </li>-->
 
 
 
