--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,26 +43,34 @@
             transform: translate(0, -1px);
         }
 
+        #price-container tr:first-child {
+            color: red;
+        }
+
+        #price-container td {
+            text-align: center;
+        }
     </style>
 </head>
-
 <body class="config">
 <div class="preloader is-active">
     <div class="preloader__wrap">
+
         <img class="preloader__img" src="images/preloader.png" alt=""></div>
 </div>
 
 <!--====== Main App ======-->
 <div id="app">
     <!--====== Main Header ======-->
-    <header class="header--style-1">
+    <header class="header--style-1 header--box-shadow">
         <th:block th:replace="fragments/base/header :: header"></th:block>
     </header>
     <!--====== End - Main Header ======-->
 
     <!--====== App Content ======-->
     <div class="app-content">
-        <div class="u-s-p-y-30">
+        <!--====== Section 2 ======-->
+        <div class="u-s-p-y-60">
             <!--====== Section Intro ======-->
             <div class="section__intro u-s-m-b-16">
                 <div class="container">
@@ -77,7 +85,10 @@
             </div>
             <!--====== End - Section Intro ======-->
         </div>
-        <div class="u-s-p-y-30" id="show-product-div">
+        <!--====== End - Section 2 ======-->
+
+        <!--====== Section 3 ======-->
+        <div class="u-s-p-y-60" id="show-product-div">
             <!--====== Section Content ======-->
             <div class="section__content" id="sticky-header">
                 <div class="container">
@@ -87,7 +98,8 @@
                             <div class="filter-category-container" id="filter-category-container">
                                 <div class="filter__category-wrapper">
 
-                                    <button class="btn filter__btn filter__btn--style-1 js-checked brand-filter total-filter" type="button"
+                                    <button class="btn filter__btn filter__btn--style-1 js-checked brand-filter total-filter"
+                                            type="button"
                                             data-filter="*">전체
                                     </button>
                                 </div>
@@ -112,41 +124,81 @@
             </div>
             <!--====== End - Section Content ======-->
         </div>
+        <!--====== End - Section 3 ======-->
+
     </div>
     <!--====== End - App Content ======-->
 
     <!--====== Main Footer ======-->
     <footer>
-        <th:block th:replace="fragments/base/footer"></th:block>
+        <th:block th:replace="fragments/base/footer :: footer"></th:block>
     </footer>
 
+    <!--====== Modal Section ======-->
+
+    <!--====== Quick Look Modal ======-->
+    <div class="modal fade new-l" id="newsletter-modal">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content modal--shadow">
+
+                <button class="btn new-l__dismiss fas fa-times" type="button" data-dismiss="modal"></button>
+                <div class="modal-body">
+                    <div class="row u-s-m-x-0">
+                        <div class="col-lg-6 new-l__col-1 u-s-p-x-0">
+                            <a class="new-l__img-wrap u-d-block" href="">
+                                <img id="gifticon-modal-img" class="u-img-fluid u-d-block" src="" alt="기프티콘 이미지">
+                            </a>
+                        </div>
+
+                        <div class="col-lg-6 new-l__col-2">
+                            <div class="new-l__section u-s-m-t-30">
+                                <div class="u-s-m-b-8 new-l--center">
+                                    <h3 class="new-l__h3" id="modal-product-name">기프티콘 가격 확인</h3>
+                                </div>
+                                <div class="u-s-m-b-5">
+                                    <table class="col-12">
+                                        <tbody id="price-container">
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--====== End - Quick Look Modal ======-->
+
+    <!--====== End - Modal Section ======-->
 </div>
 <!--====== End - Main App ======-->
 
 <th:block th:replace="fragments/base/script :: script"></th:block>
+<script src="/js/gifticon/list-modal.js"></script>
 <script src="/js/gifticon/list.js"></script>
 <script src="/js/gifticon/product-selector.js"></script>
-<script th:inline="javascript">
-    window.onload = function() {
-        createProductSpan("전체", "all", true,"/images/categorylogo/all2.png" );
-        createProductSpan("카페", "cafe", false,"/images/categorylogo/cafe-logo2.png");
-        createProductSpan("베이커리/도넛", "bakery-donut", false, "/images/categorylogo/bakery-logo.png");
-        createProductSpan("백화점/마트", "department-mart", false , "/images/categorylogo/departmentstore-logo.png");
-        createProductSpan("아이스크림", "icecream", false , "/images/categorylogo/icecream-logo.png");
-        createProductSpan("편의점", "convenient", false , "/images/categorylogo/drugstore-logo.png");
-        createProductSpan("버거/피자", "burger-pizza", false, "/images/categorylogo/fastfood-logo.png");
-        createProductSpan("치킨", "chicken", false , "/images/categorylogo/chicken-logo.png");
-        createProductSpan("외식/분식/배달", "outside", false, "/images/categorylogo/bunsick-logo.png" );
-        createBreak();
-        createProductSpan("구이/족발", "roast-porkfeet", false , "/images/categorylogo/fried-logo.png");
-        createProductSpan("레스토랑/뷔페", "restaurant-buffet", false, "/images/categorylogo/restaurant-logo.png");
-        createProductSpan("영화/음악/도서", "movie-music-books", false, "/images/categorylogo/culture-logo.png" );
-        createProductSpan("주유권", "oil", false , "/images/categorylogo/oil-logo.png");
-        createProductSpan("뷰티/헤어/바디", "beauty-hair-body", false , "/images/categorylogo/beauty-logo.png");
-        createProductSpan("건강/리빙/식품관", "health-living-foods", false, "/images/categorylogo/healthy-logo.png");
-        createProductSpan("생활/가전/엔터", "life-electronic-entertain", false , "/images/categorylogo/machine-logo.png");
-        createProductSpan("기타", "etc", false, "/images/categorylogo/etc-logo.png");
 
+<script th:inline="javascript">
+    window.onload = function () {
+        createProductSpan("전체", "all", true, "/images/categorylogo/all2.png");
+        createProductSpan("카페", "cafe", false, "/images/categorylogo/cafe-logo2.png");
+        createProductSpan("베이커리/도넛", "bakery-donut", false, "/images/categorylogo/bakery-logo.png");
+        createProductSpan("백화점/마트", "department-mart", false, "/images/categorylogo/departmentstore-logo.png");
+        createProductSpan("아이스크림", "icecream", false, "/images/categorylogo/icecream-logo.png");
+        createProductSpan("편의점", "convenient", false, "/images/categorylogo/drugstore-logo.png");
+        createProductSpan("버거/피자", "burger-pizza", false, "/images/categorylogo/fastfood-logo.png");
+        createProductSpan("치킨", "chicken", false, "/images/categorylogo/chicken-logo.png");
+        createProductSpan("외식/분식/배달", "outside", false, "/images/categorylogo/bunsick-logo.png");
+        createBreak();
+        createProductSpan("구이/족발", "roast-porkfeet", false, "/images/categorylogo/fried-logo.png");
+        createProductSpan("레스토랑/뷔페", "restaurant-buffet", false, "/images/categorylogo/restaurant-logo.png");
+        createProductSpan("영화/음악/도서", "movie-music-books", false, "/images/categorylogo/culture-logo.png");
+        createProductSpan("주유권", "oil", false, "/images/categorylogo/oil-logo.png");
+        createProductSpan("뷰티/헤어/바디", "beauty-hair-body", false, "/images/categorylogo/beauty-logo.png");
+        createProductSpan("건강/리빙/식품관", "health-living-foods", false, "/images/categorylogo/healthy-logo.png");
+        createProductSpan("생활/가전/엔터", "life-electronic-entertain", false, "/images/categorylogo/machine-logo.png");
+        createProductSpan("기타", "etc", false, "/images/categorylogo/etc-logo.png");
 
         getPurchasingGifticon([[${param.page}]], [[${param.size}]]);
 
@@ -158,9 +210,9 @@
         totalFilterEvent();
 
         totalCategoryEvent();
-
     }
 </script>
+
 
 </body>
 </html>
