--- a/src/main/resources/templates/fragments/admin/admin-header.html
+++ b/src/main/resources/templates/fragments/admin/admin-header.html
@@ -70,7 +70,7 @@
                         <ul class="ah-list ah-list--design2 ah-list--link-color-secondary">
                             <li><a href="/gifticon/add">기프티콘 등록</a></li>
                             <li><a href="/user/my-gifticon">내 기프티콘</a></li>
-                            <li><a href="/gifticon/list">기프티콘 목록</a></li>
+                            <!--<li><a href="/gifticon/list">기프티콘 목록</a></li>-->
                             <!--<li>
                                 <a href="/gifticons">기프티콘 구매</a>
                             </li>-->
