fix: Handle gifticon add error

--- a/src/main/resources/templates/gifticon/add.html
+++ b/src/main/resources/templates/gifticon/add.html
@@ -196,8 +196,7 @@
                                     </div>
 
                                     <div id="error-barcode-div" class="u-s-m-b-10">
-                                        <label id="error-barcode-modal-label" class="gl-label"
-                                               style="color: red"></label>
+                                        <label id="error-barcode-modal-label" class="gl-label" style="color: red"></label>
                                     </div>
 
                                     <div class="u-s-m-b-5">
@@ -205,9 +204,12 @@
                                         <input id="price-modal-input" name="price" class="news-l__input" type="number" step="10" placeholder="구매 가격을 입력해주세요">
                                     </div>
 
+                                    <div id="error-price-div" class="u-s-m-b-10">
+                                        <label id="error-price-modal-label" class="gl-label" style="color: red"></label>
+                                    </div>
 
-                                    <div class="u-s-m-b-15">
-                                        <button id="gifticon-add-modal-btn" class="btn btn--e-brand-b-2">등록</button>
+                                    <div class="u-s-m-y-15">
+                                        <a id="gifticon-add-modal-btn" class="btn btn--e-brand-b-2">등록</a>
                                     </div>
                                 </form>
                             </div>
