Feat: 기프티콘 이동 내역 추가

--- a/src/main/resources/templates/account/my-profile.html
+++ b/src/main/resources/templates/account/my-profile.html
@@ -45,7 +45,7 @@
                                                 <li>
                                                     <a href="/payment/orders">결제 내역</a></li>
                                                 <li>
-                                                    <a href="#">구매 내역</a></li>
+                                                    <a href="/movements">구매 내역</a></li>
                                                 <li>
                                                     <a href="#">사용 내역</a></li>
                                                 <li>
