--- a/src/main/resources/templates/movement/movement.html
+++ b/src/main/resources/templates/movement/movement.html
@@ -73,9 +73,9 @@
                                             <li>
                                                 <a href="/wishlist">내 즐겨찾기</a></li>
                                             <li>
-                                                <a class="dash-active" href="/payment/orders">결제 내역</a></li>
+                                                <a href="/payment/orders">결제 내역</a></li>
                                             <li>
-                                                <a href="#">구매 내역</a></li>
+                                                <a class="dash-active" href="/movements">구매 내역</a></li>
                                             <li>
                                                 <a href="#">사용 내역</a></li>
                                             <li>
