--- a/src/main/resources/templates/payment/orders.html
+++ b/src/main/resources/templates/payment/orders.html
@@ -75,7 +75,7 @@
                                             <li>
                                                 <a class="dash-active" href="/payment/orders">결제 내역</a></li>
                                             <li>
-                                                <a href="#">구매 내역</a></li>
+                                                <a href="/movements">구매 내역</a></li>
                                             <li>
                                                 <a href="#">사용 내역</a></li>
                                             <li>
