--- a/src/main/resources/templates/movement/movement.html
+++ b/src/main/resources/templates/movement/movement.html
@@ -70,8 +70,8 @@
                                         <ul class="dash__f-list">
                                             <li>
                                                 <a href="/mypage">내 정보</a></li>
-                                            <li>
-                                                <a href="/wishlist">내 즐겨찾기</a></li>
+<!--                                            <li>-->
+<!--                                                <a href="/wishlist">내 즐겨찾기</a></li>-->
                                             <li>
                                                 <a href="/payment/orders">결제 내역</a></li>
                                             <li>
